force-app/main/default/objects/walnut__Setting__c/walnut__Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Walnut Setting</description>
    <label>Walnut Setting</label>
</CustomObject>