force-app/main/default/objects/walnut__Setting__c/fields/walnut__Actions__c.field-meta.xml
<CustomField>
    <fullName>walnut__Actions__c</fullName>
    <description>Actions</description>
    <inlineHelpText>Actions</inlineHelpText>
    <label>Actions</label>
    <type>TextArea</type>
</CustomField>