force-app/main/default/objects/walnut__Setting__c/fields/walnut__appVersion__c.field-meta.xml
<CustomField>
    <fullName>walnut__appVersion__c</fullName>
    <description>app Version</description>
    <inlineHelpText>app Version</inlineHelpText>
    <label>appVersion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>