force-app/main/default/objects/walnut__Setting__c/fields/walnut__DefaultAction__c.field-meta.xml
<CustomField>
    <fullName>walnut__DefaultAction__c</fullName>
    <description>Default Action</description>
    <inlineHelpText>Default Action</inlineHelpText>
    <label>Default Action</label>
    <length>80</length>
    <type>Text</type>
</CustomField>