force-app/main/default/objects/walnut__Setting__c/fields/walnut__Environment__c.field-meta.xml
<CustomField>
    <fullName>walnut__Environment__c</fullName>
    <description>Environment:  default = production</description>
    <inlineHelpText>Environment</inlineHelpText>
    <label>Environment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>