force-app/main/default/objects/walnut__Setting__c/fields/walnut__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>walnut__Namespace_Prefix__c</fullName>
    <description>Namespace Prefix</description>
    <inlineHelpText>Namespace Prefix</inlineHelpText>
    <label>Namespace Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>