force-app/main/default/objects/walnut__Setting__c/fields/walnut__Queries_Where__c.field-meta.xml
<CustomField>
    <fullName>walnut__Queries_Where__c</fullName>
    <description>Queries Where</description>
    <inlineHelpText>Queries Where</inlineHelpText>
    <label>Queries Where</label>
    <length>255</length>
    <type>Text</type>
</CustomField>